Fix site-title-gap-in-Windows bug.

--- a/scss/_blocks.scss
+++ b/scss/_blocks.scss
@@ -203,14 +203,7 @@
   $foreground-colour: #ffffff;
   color: $foreground-colour;
   margin: em($base-layout-unit * 3, $base-font-size) auto;
-  /* div */.site-header__title {
-    // HACKS: In all versions of Internet Explorer, the gap between the site
-    // title and site navigation is a little too narrow; the following mess
-    // fixes (lol) that.
-    _margin: 0 0 em($base-layout-unit / 4, $base-font-size) 0;
-    margin/*\**/: 0 0 em($base-layout-unit / 4, $base-font-size) 0\9;
-    @media screen and (min-width:0\0) {
-      margin: 0 0 em($base-layout-unit / 4, $base-font-size) 0; } }
+  /* div */.site-header__title { }
   /* nav */.site-header__navigation { } }
 
 /* h1 */.site-title {
